# NanoTrans

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  PRIVACY.md  README.Md  build.rs
.github/workflows/: release.yml
docs/: README-eng.md
scripts/: build-macos-app.sh
src/: caret.rs  clipboard.rs  config.rs  hotkey.rs  i18n.rs  input.rs  main.rs  tray.rs
src/translate/: mod.rs
ui/: main.slint  popup.slint  settings.slint  theme.slint
