[package]
name = "nanotrans"
version = "0.1.0"
edition = "2021"
description = "Lightweight Windows translation assistant with cursor-following popup"
authors = ["NanoTrans"]

[dependencies]
# UI Framework
slint = "1.9"

# Windows API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_Globalization"
]}

# System tray and hotkey
tray-icon = "0.19"
global-hotkey = "0.6"

# Clipboard
arboard = "3.4"

# HTTP client (minimal features for size)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Channel for event handling
crossbeam-channel = "0.5"

# Config directory
dirs = "5.0"

# Lazy static
once_cell = "1.19"

# Error handling
anyhow = "1.0"

# URL encoding
urlencoding = "2.1"

# Async trait support
async-trait = "0.1"

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"

license = "MIT"