[package]
name = "nanotrans"
version = "0.1.0-alpha.2"
edition = "2021"
description = "\u6781\u81F4\u8F7B\u91CF\u5316\u8F93\u5165\u7FFB\u8BD1\u52A9\u624B --Built with Rust"
authors = ["qqqqqf-q <qingf622@outlook.com>"]
repository = "https://github.com/qqqqqf-q/NanoTrans"

[dependencies]
# UI Framework
slint = "1.9"

# System tray and hotkey
tray-icon = "0.21"
global-hotkey = "0.6"

# Clipboard
arboard = "3.4"

# HTTP client (minimal features for size)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# Channel for event handling
crossbeam-channel = "0.5"

# Config directory
dirs = "5.0"

# Lazy static
once_cell = "1.19"

# Error handling
anyhow = "1.0"

# Image processing for tray icon
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

# URL encoding
urlencoding = "2.1"

# Async trait support
async-trait = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Globalization"
]}

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = "0.23"
core-foundation = "0.9"

[build-dependencies]
slint-build = "1.9"

[target.'cfg(target_os = "macos")'.build-dependencies]
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
resvg = "0.45.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
CompanyName = "qqqqqf-q"
ProductName = "NanoTrans"
FileDescription = "\u6781\u81F4\u8F7B\u91CF\u5316\u8F93\u5165\u7FFB\u8BD1\u52A9\u624B --Built with Rust"
Comments = "https://github.com/qqqqqf-q/NanoTrans | qingf622@outlook.com"
InternalName = "nanotrans"
OriginalFilename = "nanotrans.exe"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = "z"

license = "MIT"
